--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=springSecurity
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/server
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=${DB_CONNECT}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=20
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 debug=true
 server.port=8080
