--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,45 @@
 name: CI
+
 on:
   push:
     branches: [ "main", "master" ]
 
 jobs:
-  build:
+  build-java:
     runs-on: ubuntu-latest
 
     steps:
-
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build project with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: spring-app-jar
+          path: target/*.jar
+
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: build-java
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Download JAR artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: spring-app-jar
+          path: target/
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -22,11 +50,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-
       - name: Build Docker image
         run: |
           docker build -t m004ka/springuserapplication:latest .
-
 
       - name: Push Docker image to Docker Hub
         run: |
@@ -35,4 +61,3 @@ jobs:
       - name: Verify Docker image is pushed
         run: |
           docker pull m004ka/springuserapplication:latest
-
