--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Upload JAR artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: spring-app-jar
           path: target/*.jar
@@ -36,10 +36,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download JAR artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: spring-app-jar
-          path: target/
+          path: .
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
