--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,3 +61,30 @@ jobs:
       - name: Verify Docker image is pushed
         run: |
           docker pull m004ka/springuserapplication:latest
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-docker
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Copy docker-compose.yml to server via SSH
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "~/app"
+
+      - name: Run docker-compose on server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd ~/app
+            docker-compose pull
+            docker-compose up -d
