--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Run docker-compose on server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SSH_HOSTT }}
+          host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           post: 22
           script: |
