--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy docker-compose.yml to server via SSH
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@main
         with:
           username: "m004ka"
           port: 22
@@ -82,7 +82,7 @@ jobs:
           options: "-o StrictHostKeyChecking=no"
 
       - name: Run docker-compose on server
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@main
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
