--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Verify Docker image is pushed
         run: |
           docker pull m004ka/springuserapplication:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build-docker
@@ -69,17 +70,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Copy docker-compose.yml to server via SSH
+      - name: Copy docker-compose.yml to server via SCP
         uses: appleboy/scp-action@master
         with:
           username: "m004ka"
           port: 22
-          host: ${{ secrets.SSH_HOST}}
+          host: ${{ secrets.SSH_HOST }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
           target: "~/app"
           debug: true
-          options: "-o StrictHostKeyChecking=no"
 
       - name: Run docker-compose on server
         uses: appleboy/ssh-action@master
@@ -87,7 +87,7 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          post: 22
+          port: 22
           script: |
             cd ~/app
             docker-compose pull
