--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,15 +71,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Copy docker-compose.yml to server via SCP
-        uses: appleboy/scp-action@master
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.5
         with:
           username: "m004ka"
-          port: 22
-          host: ${{ secrets.SSH_HOST }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "docker-compose.yml"
-          target: "~/app"
-          debug: true
+          server: ${{ secrets.SSH_HOST }}
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          local_path: "docker-compose.yml"
+          remote_path: "~/app"
+          sftpArgs: '-o ConnectTimeout=5'
 
       - name: Run docker-compose on server
         uses: appleboy/ssh-action@master
