--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,7 +77,7 @@ jobs:
           server: ${{ secrets.SSH_HOST }}
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
           local_path: "docker-compose.yml"
-          remote_path: "~/app"
+          remote_path: "/home/m004ka/app"
           sftpArgs: '-o ConnectTimeout=5'
 
       - name: Run docker-compose on server
