--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   db:
     image: postgres:latest
@@ -14,9 +16,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: openjdk:17-jre-slim  
     container_name: spring_security_app
     depends_on:
       - db
@@ -28,7 +28,9 @@ services:
       - bmw
     ports:
       - "8080:8080"
-    command: /usr/local/bin/wait-for-it.sh db:5432 -- java -jar app.jar
+    volumes:
+      - ./app.jar:/app/app.jar  
+    command: java -jar /app/app.jar  
 
 networks:
   bmw:
