--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: spring-app-jar
-          path: ./
+          path: .
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
