--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,7 +61,6 @@ jobs:
       - name: Verify Docker image is pushed
         run: |
           docker pull m004ka/springuserapplication:latest
-
   deploy:
     runs-on: ubuntu-latest
     needs: build-docker
@@ -70,15 +69,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Copy docker-compose.yml to server via SCP
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.5
+      - name: Copy docker-compose.yml to server via SSH
+        uses: appleboy/scp-action@master
         with:
-          username: "m004ka"
-          server: ${{ secrets.SSH_HOST }}
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          local_path: "docker-compose.yml"
-          remote_path: "/home/m004ka/app"
-          sftpArgs: '-o ConnectTimeout=5'
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "docker-compose.yml"
+          target: "~/app"
 
       - name: Run docker-compose on server
         uses: appleboy/ssh-action@master
@@ -86,8 +84,8 @@ jobs:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
+          passphrase: ${{ secrets.SSH_KEY_PASSPHRASE }}
           script: |
-            cd /home/m004ka/app
+            cd ~/app
             docker-compose pull
             docker-compose up -d
